--- a/CSS/style.css
+++ b/CSS/style.css
@@ -167,7 +167,7 @@ section {
 footer {
   text-align: center;
   padding: 10px 0;
-  position: relative;
+  position: absolute;
   bottom: 0px;
   width: 100%;
   margin-top: auto;
@@ -422,6 +422,11 @@ footer p {
   margin-bottom: 0.9rem;
 }
 
+/*Odd part CSS*/
+#odd-part{
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1400px) {
   #profile {
     height: 83vh;
@@ -433,7 +438,7 @@ footer p {
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1250px) {
   .section-pic-container {
     display: flex;
     width: 275px;
@@ -494,6 +499,7 @@ footer p {
     margin-top: 20%;
   }
   footer {
+    position: relative;
     width: 100%;
     text-align: center;
     margin-bottom: auto;
@@ -571,8 +577,7 @@ footer p {
   }
 }
 
-
-/*Odd part CSS*/
-#odd-part{
-  cursor: pointer;
-}
+@media screen and (max-width: 400px){
+  footer{
+    margin-top: 50%;
+  }
